trying to fix contrast issues

--- a/lesson3/css/color-scheme.css
+++ b/lesson3/css/color-scheme.css
@@ -34,7 +34,7 @@
       color: #eee;
   }
   #color-grid div:nth-child(8) {
-      background-color: #87a15f;
+      background-color: #697e4b;
       color: #eee;
   }
   
