--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -76,7 +76,7 @@ nav ul li a:hover {
     font-weight: bold;
 }
 nav ul li.active a {
-    background-color: #87a15f;
+    background-color: #697e4b;
     color: #fff;
 }
 
